@@ -56,6 +56,8 @@ Bug fixes since 1.6
 - Classloading CachedDateTimeZone could invalidate state [2935625]
   Default time zone now lazily loaded
 
+- DateTimeUtils shared static variable now volatile [2986043]
+
 - Time zone compiler now handles non-UTC better
 
 - Assorted Javadoc clarifications, including [2721880]
